# total-beginner-haskell

./: .ghci  CHANGELOG.md  LICENSE  README.md  bad-borrowers.json  bad-borrowers.yml  books-before.json  books-before.yml  borrowers-before.json  borrowers-before.yml  ghcid.txt  json-strings.txt  made-with.txt  nonsense.json  notes.txt  package.yaml  stack.yaml  tester.json  total-beginner-haskell.cabal  users.yml  y.txt
app/: Main.hs
src/: Book.hs  Borrower.hs  Brook.hs  Collection.hs  Library.hs  Main.hs  People.hs  Person.hs  Scratch.hs  Testing.hs  Yaml.hs  y.txt
test/: All_Tests.hs  Book_Test.hs  Borrower_Test.hs  FindIdentifier.hs  FindIdentifier_Test.hs  Library_Test.hs  Person_Test.hs  Spec.hs  Testing.hs
