name:                total-beginner-haskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/eatobin/total-beginner-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Tobin
maintainer:          eatobin@gmail.com
copyright:           None
category:            None
build-type:          Simple
cabal-version:       >=1.10

executable total-beginner-haskell
  hs-source-dirs:      src
                     , test
  main-is:             Main.hs
  other-modules:       Borrower
                     , Borrower_Test
                     , Book
                     , Book_Test
                     , Library
                     , Library_Test
                     , All_Tests
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , stm
                     , bytestring
                     , directory
                     , aeson

test-suite total-beginner-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
                     , test
  main-is:             Spec.hs
  other-modules:       Borrower
                     , Book
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
                     , aeson
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eatobin/total-beginner-haskell
